# deferral

./: deferral.cabal  examples.hs
Control/Monad/: Deferral.hs
